--- a/apps/web/templates/layout.html
+++ b/apps/web/templates/layout.html
@@ -10,6 +10,7 @@
 </head>
 <body class="min-vh-100">
     {% block content %}{% endblock %}
+    <script type='text/javascript' src='//pl27164164.profitableratecpm.com/d5/14/47/d5144729e303e9d65275bef25eb409b7.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="//unpkg.com/alpinejs" defer></script>
